# astrcodey

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PROJECT_ARCHITECTURE.md  README.md  README_CN.md  deny.toml  tmp_encode.rs  todo.md
.astrcode/Skills/publish-version/: Skill.md
.github/workflows/: ci.yml  release.yml  weekly-release.yml
crates/astrcode-ai/: Cargo.toml
crates/astrcode-ai/src/: common.rs  lib.rs  openai.rs  serialization.rs  stream_decoder.rs
crates/astrcode-bundled-extensions/: Cargo.toml
crates/astrcode-bundled-extensions/src/: lib.rs
crates/astrcode-cli/: Cargo.toml
crates/astrcode-cli/src/: acp_bridge.rs  exec.rs  main.rs  transport.rs  tui.rs
crates/astrcode-cli/tests/: end_to_end.rs
crates/astrcode-client/: Cargo.toml
crates/astrcode-client/src/: client.rs  error.rs  stream.rs  transport.rs
crates/astrcode-client/tests/: client_test.rs
crates/astrcode-context/: Cargo.toml
crates/astrcode-context/src/: context_engine.rs  lib.rs  manager.rs  prompt_engine.rs  token_budget.rs
crates/astrcode-core/: Cargo.toml
crates/astrcode-core/src/: event.rs  extension.rs  lib.rs  lifecycle.rs  llm.rs  message_attachment.rs  permission.rs  prompt.rs  render.rs  storage.rs  tool.rs  tool_access.rs  tool_ui.rs  types.rs  (+1 more)
crates/astrcode-eval/: Cargo.toml
crates/astrcode-extension-agent-tools/: Cargo.toml  bundled-extension.json
crates/astrcode-extension-agent-tools/src/: agent.rs  lib.rs
crates/astrcode-extension-agent-tools/src/builtin_agents/: execute.md  explore.md  reviewer.md
crates/astrcode-extension-goal/: Cargo.toml
crates/astrcode-extension-goal/src/: lib.rs  store.rs
crates/astrcode-extension-goal/templates/: budget_limit.md  continuation.md
crates/astrcode-extension-mcp/: Cargo.toml
crates/astrcode-extension-mcp/src/: client.rs  config.rs  http_client.rs  lib.rs  names.rs  protocol.rs  search.rs
crates/astrcode-extension-memory/: Cargo.toml
crates/astrcode-extension-mode/: Cargo.toml  bundled-extension.json
crates/astrcode-extension-mode/builtin_prompts/: plan_entry.md  plan_exit.md  plan_mode.md  plan_template.md
crates/astrcode-extension-mode/src/: ask_user.rs  catalog.rs  lib.rs  store.rs  tools.rs
crates/astrcode-extension-sdk/: Cargo.toml
crates/astrcode-extension-sdk/src/: builder.rs  lib.rs  s6r.rs  wasm_abi.rs
crates/astrcode-extension-sdk/src/runtime/: mod.rs  peer.rs  task_utils.rs
crates/astrcode-extension-sdk/src/s5r/: capabilities.rs  effects.rs  messages.rs
crates/astrcode-extension-sdk/src/worker/: host.rs  manifest.rs  mod.rs  registry.rs
crates/astrcode-extension-skill/: Cargo.toml
crates/astrcode-extension-todo-tool/: Cargo.toml  bundled-extension.json
crates/astrcode-extension-todo-tool/src/: lib.rs
crates/astrcode-extension-web-tools/: Cargo.toml
crates/astrcode-extensions/: Cargo.toml
crates/astrcode-log/: Cargo.toml
crates/astrcode-protocol/: Cargo.toml
crates/astrcode-server/: Cargo.toml
crates/astrcode-session/: Cargo.toml
crates/astrcode-storage/: Cargo.toml
crates/astrcode-support/: Cargo.toml
crates/astrcode-tools/: Cargo.toml
docs/: AstrCode-Design.md  Project-Structure.md  TODO.md  architecture.md  configuration.md  configuration_cn.md  crates.md  extension-author-guide.md  extension-redesign-proposal.md  extension-system.md  kernel-embedding.md  plugin-system-wasm-s6r.md  plugin-system.md  session-first.md  session-runtime-optimization-plan.md  todo.md  ui-render-spec.md
eval-tasks/: Cargo.toml
eval-tasks/src/: lib.rs  main.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: dev-server.mjs  dev-server.test.mjs  prepare-sidecar.mjs  protocol-contract.test.mjs
frontend/src/: App.tsx  index.css  vite-env.d.ts
npm/astrcode/: install.js  package.json
scripts/: check-deps.py  prepare-npm-packages.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
(+292 files in other folders)
