[package]
name = "astrcode-extension-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Subagent delegation extension"

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
