[package]
name = "astrcode-extension-goal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Codex-style session goal extension"

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
