[package]
name = "astrcode-extension-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stdio MCP tool extension"

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "process", "io-util", "net", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
