[package]
name = "astrcode-extension-mode"
version = "0.2.2"
edition = "2021"
description = "Agent running mode switching extension (code / plan)"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
