[package]
name = "astrcode-extension-todo-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Progress todo list extension"

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
